# Copyright (c) 2021 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_binary",
)

da_scala_binary(
    name = "deep",
    srcs = glob(["src/main/**/*.scala"]),
    main_class = "com.daml.deep.Dive",
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
    ],
)
