# Copyright (c) 2020 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_binary",
    "da_scala_library",
    "lf_scalacopts",
)

da_scala_library(
    name = "collectsrcs",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [],
    deps = [],
)

da_scala_binary(
    name = "run_collectsrc",
    main_class = "com.daml.collectsrcs.Main",
    visibility = ["//visibility:public"],
    deps = [
        ":collectsrcs",
    ],
)
