# Copyright (c) 2019 The DAML Authors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_binary",
    "da_scala_library",
)


runtimeDeps = [
    "@maven//:ch_qos_logback_logback_classic",
    "@maven//:ch_qos_logback_logback_core",
]

da_scala_library(
    name = "sdk-lib",
    srcs = glob(["src/main/scala/**/*.scala"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    runtime_deps = runtimeDeps,
    deps = [
        "@maven//:com_typesafe_scala_logging_scala_logging_2_12",
        "@maven//:io_spray_spray_json_2_12",
        "@maven//:com_typesafe_akka_akka_http_spray_json_2_12",
        "//triggers/runner:trigger-runner-lib",
        "//daml-script/runner:script-runner-lib",
        "//language-support/codegen-main:codegen-main-lib",
        "//extractor:extractor",
        "//ledger-service/http-json:http-json",
        "//navigator/backend:navigator-library",
        "//ledger/sandbox:sandbox",
    ],
)

da_scala_binary(
    name = "sdk",
    main_class = "com.digitalasset.daml.sdk.SdkMain",
    tags = ["maven_coordinates=com.digitalasset.daml.sdk:sdk:__VERSION__"],
    visibility = ["//visibility:public"],
    deps = [
        ":sdk-lib",
        "//navigator/backend:backend-resources",
        "//navigator/backend:frontend-resources",
        "//navigator/backend:version-resource",
    ],
)
