# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_library")

da_haskell_library(
    name = "client",
    srcs = glob(["src/**/*.hs"]),
    hazel_deps = [
        "async",
        "base",
        "binary",
        "blaze-html",
        "bytestring",
        "conduit-extra",
        "conduit",
        "containers",
        "cryptonite",
        "deepseq",
        "directory",
        "extra",
        "filepath",
        "hashable",
        "lens",
        "mtl",
        "process",
        "split",
        "stm",
        "system-filepath",
        "text",
        "time",
        "transformers",
        "uri-encode",
        "vector",
        "http2-client-grpc",
        "proto-lens",
        "http2",
        "http2-client",
        "proto3-suite",
        "http2-grpc-types",
    ],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/daml-lf-ast",
        "//compiler/daml-lf-proto",
        "//compiler/scenario-service/protos:scenario_service_haskell_proto",
        "//daml-assistant:daml-project-config",
        "//libs-haskell/bazel-runfiles",
        "//libs-haskell/da-hs-base",
    ],
)
