# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:pkg.bzl", "pkg_tar")

filegroup(
  name = "daml-prim-src",
  srcs = glob(["**/*.daml"]),
  visibility = ["//visibility:public"]
)

filegroup(
  name = "daml-prim-src-no-lib",
  srcs = glob(["**/*.daml"], exclude = ["LibraryModules.daml"],),
  visibility = ["//visibility:public"]
)

pkg_tar(
  name = "daml-prim-src-tarball",
  mode = "0666",
  srcs = ["."],
  visibility = ["//visibility:public"]
)
